--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -1,17 +1,48 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-
 scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <title>Bootstrap</title>
+  <style>
+    .small-combobox {
+      max-width: 150px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+  </style>
+  <title>Shopsystem - KUD0132</title>
 </head>
-
 <body>
-  <div class="container bg-secondary">Hello, world!</div>
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container-fluid">
+      <select class="form-select small-combobox" aria-label="Default select example">
+        <option selected>Title</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <label class="mx-2">Category</label>
+        <select class="form-select small-combobox" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <button class="btn btn-primary ms-auto" type="button">Button</button>
+      </div>
+    </div>
+  </nav>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
-
 </html>
