--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -7,7 +7,8 @@ scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <style>
     .small-combobox {
-      max-width: 150px;
+      min-width: 75px;
+      max-width: 175px;
       margin-left: 10px;
       margin-right: 10px;
     }
@@ -15,13 +16,16 @@ scale=1, shrink-to-fit=no">
   <title>Shopsystem - KUD0132</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
       <select class="form-select small-combobox" aria-label="Default select example">
         <option selected>Title</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+        <option value="1">Price</option>
+        <option value="2">Stock</option>
+        <option value="3">Brand</option>
+        <option value="4">Category</option>
+        <option value="5">Placement</option>
+        <option value="6">Id</option>
       </select>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -31,18 +35,39 @@ scale=1, shrink-to-fit=no">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <label class="mx-2">Category</label>
-        <select class="form-select small-combobox" aria-label="Default select example">
-          <option selected>Open this select menu</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-        <button class="btn btn-primary ms-auto" type="button">Button</button>
+        <div class="d-flex align-items-center">
+          <label class="mx-2">Category</label>
+          <select id="category-combobox" class="form-select small-combobox" aria-label="Default select example">
+            <option selected>Select category</option>
+            <option value="3">Three</option>
+          </select>
+        </div>
+        <a href="./add_product.html" class="btn btn-primary ms-auto">New Products</a>
       </div>
     </div>
   </nav>
+
+  <table class="table table-bordered table-sm">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">TITLE</th>
+        <th scope="col">PRICE</th>
+        <th scope="col">STOCK</th>
+        <th scope="col">BRAND</th>
+        <th scope="col">CATEGORY</th>
+        <th scope="col">PLACEMENT</th>
+      </tr>
+    </thead>
+    <tbody id="table-content" class="table-group-divider">
+
+    </tbody>
+  </table>
+
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="./scripts.js"></script>
 </body>
 </html>
