--- a/bootstrap-project/add_product.html
+++ b/bootstrap-project/add_product.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <title>Shopsystem - Add Product</title>
     <style>
         .overflow-scroll {
@@ -12,8 +13,7 @@
     </style>
 </head>
 <body class="d-flex align-items-center justify-content-center" style="height: 100vh;">
-    <a href="/" class="btn btn-primary position-absolute top-0 start-0 m-3">Back</a>
-    <form class="col-lg-3">
+    <form class="col-6 col-lg-3">
         <div class="mb-3">
             <label for="titleInput" class="form-label">Title</label>
             <input type="text" class="form-control" id="titleInput">
@@ -72,9 +72,7 @@
             <button type="submit" class="btn btn-primary">Add Product</button>
         </div>
     </form>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./scripts.js"></script>
-
 </body>
 </html>
