--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -4,42 +4,46 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-
 scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
   <style>
     .small-combobox {
-      min-width: 75px;
+      min-width: 150px;
       max-width: 175px;
       margin-left: 10px;
       margin-right: 10px;
     }
+    
   </style>
   <title>Shopsystem - KUD0132</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
     <div class="container-fluid">
-      <select class="form-select small-combobox" aria-label="Default select example">
-        <option selected>Title</option>
-        <option value="1">Price</option>
-        <option value="2">Stock</option>
-        <option value="3">Brand</option>
-        <option value="4">Category</option>
-        <option value="5">Placement</option>
-        <option value="6">Id</option>
-      </select>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <div class="d-flex align-items-center w-100">
+        <select class="form-select small-combobox" aria-label="Default select example">
+          <option selected>Title</option>
+          <option value="1">Price</option>
+          <option value="2">Stock</option>
+          <option value="3">Brand</option>
+          <option value="4">Category</option>
+          <option value="5">Placement</option>
+          <option value="6">Id</option>
+        </select>
+        <form class="d-flex">
+          <input class="form-control me-2" style="width: 250px;" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="d-flex align-items-center">
           <label class="mx-2">Category</label>
           <select id="category-combobox" class="form-select small-combobox" aria-label="Default select example">
             <option selected>Select category</option>
-            <option value="3">Three</option>
           </select>
         </div>
         <a href="./add_product.html" class="btn btn-primary ms-auto">New Products</a>
