--- a/bootstrap-project/index.html
+++ b/bootstrap-project/index.html
@@ -20,7 +20,7 @@ scale=1, shrink-to-fit=no">
 <body>
   <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
     <div class="container-fluid">
-      <div class="d-flex align-items-center w-100">
+      <div class="d-flex align-items-center">
         <select class="form-select small-combobox" aria-label="Default select example">
           <option selected>Title</option>
           <option value="1">Price</option>
@@ -39,14 +39,14 @@ scale=1, shrink-to-fit=no">
         </button>
       </div>
       
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="d-flex align-items-center">
+      <div class="collapse navbar-collapse w-100" id="navbarNavAltMarkup">
+        <div class="d-flex align-items-center" style="margin-right: auto;">
           <label class="mx-2">Category</label>
           <select id="category-combobox" class="form-select small-combobox" aria-label="Default select example">
             <option selected>Select category</option>
           </select>
         </div>
-        <a href="./add_product.html" class="btn btn-primary ms-auto">New Products</a>
+        <a href="./add_product.html" class="btn btn-primary ms-auto" style="width: 150px;">New Products</a>
       </div>
     </div>
   </nav>
