--- a/bootstrap-project/edit_product.html
+++ b/bootstrap-project/edit_product.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <title>Shopsystem - Add Product</title>
+    <title>Shopsystem - Edit Product</title>
     <style>
         .overflow-scroll {
             overflow-x: auto;
@@ -16,15 +16,15 @@
     <form class="col-6 col-lg-3">
         <div class="mb-3">
             <label for="titleInput" class="form-label">Title</label>
-            <input type="text" class="form-control" id="titleInput">
+            <input type="text" class="form-control" value="Product" id="titleInput">
         </div>
         <div class="mb-3">
             <label for="priceInput" class="form-label">Price</label>
-            <input type="number" class="form-control" id="priceInput">
+            <input type="number" class="form-control" value="200" id="priceInput">
         </div>
         <div class="mb-3">
             <label for="stockInput" class="form-label">Stock</label>
-            <input type="number" class="form-control" id="stockInput">
+            <input type="number" class="form-control" value="200" id="stockInput">
         </div>
         <div class="mb-3">
             <label for="brandInput" class="form-label">Brand</label>
@@ -68,9 +68,20 @@
                 </div> 
             </div> 
         </div>
-        <div class="mb-3 d-flex justify-content-center">
-            <a href="./index.html"class="btn btn-primary" id="add-product-button">Add Product</a>
+        <div class="mb-3 d-flex justify-content-around">
+            <a href="./index.html" class="btn btn-danger" id="delete-product-button">Delete Product</a>
+            <a href="./index.html"class="btn btn-primary" id="save-product-button">Save Product</a>
         </div>
+        <script>
+            document.getElementById('delete-product-button').addEventListener('click', () => {
+                window.alert('product deleted')  
+            })
+
+            document.getElementById('save-product-button').addEventListener('click', () => {
+                window.alert('product saved')  
+            })
+
+        </script>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./scripts.js"></script>
